<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/shoeInventoryView"
    android:layout_width="match_parent"
    android:layout_height="200dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/shoeListingConstraintId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/shoeNames_text"
            style="@style/BaseStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/shoelisting_name"
            app:layout_constraintBottom_toTopOf="@+id/shoeCompanies_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Name of Shoes" />

        <TextView
            android:id="@+id/shoeCompanies_text"
            style="@style/BaseStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/shoeListing_company"
            app:layout_constraintBottom_toTopOf="@+id/shoeSizes_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoeNames_text"
            tools:text="Name of Company" />

        <TextView
            android:id="@+id/shoeSizes_text"
            style="@style/BaseStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/shoeListing_size"
            app:layout_constraintBottom_toTopOf="@+id/shoeDescrition_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoeCompanies_text"
            tools:text="Size of Shoes" />

        <TextView
            android:id="@+id/shoeDescrition_text"
            style="@style/BaseStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/shoeListing_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoeSizes_text"
            tools:text="Description of Shoes" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>



